Update training code

--- a/options/test/AlignFormer/AlignFormer_test.yml
+++ b/options/test/AlignFormer/AlignFormer_test.yml
@@ -10,9 +10,9 @@ datasets:
   test:
     name: test
     type: TripleImageDataset
-    dataroot_gt: /mnt/lustre/rcfeng/UDC/dataset/iphone_pair_sub300/ref/test_sub/
-    dataroot_ref: /mnt/lustre/rcfeng/UDC/dataset/iphone_pair_sub300/ref/test_sub/
-    dataroot_lq: /mnt/lustre/rcfeng/UDC/dataset/iphone_pair_sub300/lq/test_sub/
+    dataroot_gt: datasets/iphone_dataset/ref/test_sub/
+    dataroot_ref: datasets/iphone_dataset/ref/test_sub/
+    dataroot_lq: datasets/iphone_dataset/lq/test_sub/
     filename_tmpl: '{}'
     io_backend:
       type: disk
@@ -32,11 +32,10 @@ network_g:
   flow_model_path: experiments/pretrained_models/RAFT/raft-things.pth
   flow_ft: false
   # DA module
-  dam_flag: true
   dam_ft: false
   dam_feat: 64
   dam_demodulate: true
-  dam_path: experiments/pretrained_models/163_CTM_f64_demod_ip300_cx_conv44/models/net_g_latest.pth
+  dam_path: ~
   # main branch
   main_ft: true
 
@@ -44,7 +43,6 @@ network_g:
 # validation settings
 val:
   save_img: true
-  save_npy: false
   suffix: ~
 
   metrics:
